--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
           </div>
         </div>
 
-        <h2 class="profile__name">Mark Hitsuraan<img src="post/img/tickxanh.svg" alt="Đã Xác Minh"
+        <h2 class="profile__name">Bundas Andrian<img src="post/img/tickxanh.svg" alt="Đã Xác Minh"
             style="height: 15px;" /></b>
         </h2>
-        <h3 class="profile__profession">"I'am a simple bot creator need some belat "<br>@markdev69</h3>
+        <h3 class="profile__profession">"A sample automated Facebook messenger chatbot."<br>@markdev69</h3>
 
         <ul class="profile__social">
           <a href="https://www.facebook.com/mark.dev69" target="_blank" class="profile__social-link">
@@ -66,19 +66,19 @@
 
       <div class="profile__info grid">
         <div class="profile__info-group">
-          <h3 class="profile__info-number">2003</h3>
+          <h3 class="profile__info-number">1516</h3>
           <p class="profile__info-description">
             Year of birth<br>
           </p>
         </div>
         <div class="profile__info-group">
-          <h3 class="profile__info-number">+669</h3>
+          <h3 class="profile__info-number">+1M</h3>
           <p class="profile__info-description">
-            Achievement
+            Likes
           </p>
         </div>
         <div class="profile__info-group">
-          <h3 class="profile__info-number">Philippines</h3>
+          <h3 class="profile__info-number">Japam</h3>
           <p class="profile__info-description">Location</p>
         </div>
       </div>
@@ -93,27 +93,7 @@ class="profile__info-group">
   </div>
     <div 
     class="profile__info-group">
-            <h3 class="profile__info-number">MY REST API</h3><span><a style="color: #afbbc4" href="https://last-api-30a30f1ae341.herokuapp.com"class="profile__info-description">https://last-api.herokuapp.com</span>
-            </div>
-    <div 
-class="profile__info-group">
-        <h3 class="profile__info-number">COOKIE GETTER</h3><span><a style="color: #afbbc4" href="https://cookies-getter-dbef37e199d3.herokuapp.com/"class="profile__info-description">https://cookies-getter.herokuapp.com/</span>
-        </div>
-    <div 
-      class="profile__info-group">
-        <h3 class="profile__info-number">APPSTATE GETTER</h3><span><a style="color: #afbbc4" href="https://appstate-token-getter-77eff25c891f.herokuapp.com/"class="profile__info-description">https://appstate-token-getter.herokuapp.com/</span>
-        </div>
-    <div 
-    class="profile__info-group">
-            <h3 class="profile__info-number">FACEBOOK AUTOBOT</h3><span><a style="color: #afbbc4" href="https://fb-autobot-c53bafc5dd08.herokuapp.com"class="profile__info-description">https://fb-autobot.herokuapp.com</span>
-            </div>
-    <div 
-    class="profile__info-group">
-            <h3 class="profile__info-number">FACEBOOK SHAREBOOST</h3><span><a style="color: #afbbc4" href="https://spamshare-534ede9825b8.herokuapp.com"class="profile__info-description">https://spamshare.herokuapp.com</span>
-            </div>
-    <div 
-    class="profile__info-group">
-            <h3 class="profile__info-number">FACEBOOK GUARD</h3><span><a style="color: #afbbc4" href="https://fb-guard.onrender.com"class="profile__info-description">https://fb-guard.onrender.com</span>
+            <h3 class="profile__info-number">auto-fb-bot</h3><span><a style="color: #afbbc4" href="https://bit.ly/3QZWSET"class="profile__info-description">https://bit.ly/3QZWSET</span>
             </div>
     <!--  <div class="skills__content grid" data-content id="tucodethem">
         <link href='https://fonts.googleapis.com/css?family=Dancing+Script|Lobster|Pattaya|Srisakdi&display=swap'
