--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           <p class="profile__info-description">Location</p>
         </div>
       </div>
+    </body>
 <!--
       <div class="profile__buttons">
         <!-- Insert your CV -->
